# condor

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  SIGUIENTE.md  pyproject.toml
.github/actions/condor-scan/: action.yml
.github/workflows/: ci.yml  example-condor-scan.yml  publish.yml
condor/: __init__.py  baseline.py  cli.py  compliance.py  compliance_report.py  config.py  html_report.py  junit_report.py  remediation.py  sarif.py
condor/core/: models.py
condor/integrations/: __init__.py  defectdojo.py  notify.py
condor/modules/: asi01_goal_hijack.py  asi02_tool_misuse.py  asi03_privilege.py  asi04_supply_chain.py  asi05_code_exec.py  asi06_memory_poisoning.py  asi07_inter_agent.py  asi08_cascading.py  asi09_trust.py  asi10_rogue.py  base.py
docs/: cfp-abstract.md  owasp-asi-top10.md  slides.html
docs/case-studies/: cs01-flowise-1.8.2.md  cs02-langflow-latest.md  cs03-dify-latest.md
tests/: test_asi01.py  test_asi02.py  test_asi03.py  test_asi03_n8n_setup.py  test_asi04.py  test_asi05.py  test_asi06.py  test_asi07.py  test_asi08.py  test_asi09.py  test_asi10.py  test_baseline.py  test_cli.py  test_compliance.py  test_compliance_report.py  test_config.py  test_html_report.py  test_integrations_defectdojo.py  test_integrations_notify.py  test_junit_report.py  test_models.py  test_platform_autogen.py  test_platform_chroma.py  test_platform_crewai.py  test_platform_dify.py  test_platform_flowise.py  test_platform_generic.py  test_platform_hayhooks.py  test_platform_langflow.py  test_platform_langgraph.py  test_platform_letta.py  test_platform_llamaindex.py  test_platform_n8n.py  test_platform_ollama.py  test_platform_openai_compat.py  test_platform_openwebui.py  test_platform_qdrant.py  test_remediation.py  test_sarif.py
tests/e2e/: docker-compose.yml  run_e2e.py
