[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cobaltosec-condor"
version = "0.1.0"
description = "Agentic AI security testing framework — OWASP ASI Top 10"
authors = [{name = "CobaltoSec", email = "security@cobalto-sec.tech"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
keywords = ["security", "ai", "agents", "owasp", "agentic", "pentest"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "typer>=0.12",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-mock>=3.12"]

[project.scripts]
condor = "condor.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["condor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
