[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cobaltosec-condor"
version = "1.0.0"
description = "Agentic AI security scanner — OWASP ASI Top 10"
authors = [{name = "CobaltoSec", email = "security@cobalto-sec.tech"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
keywords = ["security", "ai", "agents", "owasp", "agentic", "pentest", "llm", "red-team", "flowise", "langflow"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "typer>=0.12",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/CobaltoSec/condor"
Repository = "https://github.com/CobaltoSec/condor"
"Bug Tracker" = "https://github.com/CobaltoSec/condor/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-mock>=3.12"]

[project.scripts]
condor = "condor.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["condor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
